[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/level_menu.gd" type="Script" id=1]
[ext_resource path="res://Themes/corona_up.png" type="Texture" id=2]
[ext_resource path="res://fonts/perfect_dark.fnt" type="BitmapFont" id=3]
[ext_resource path="res://music/12. weird electro_level_selection.ogg" type="AudioStream" id=4]

[node name="Levels" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( -0.250671, 3.79004 )
transform/scale = Vector2( 1.00266, 0.580512 )
texture = ExtResource( 2 )
centered = false
__meta__ = { "_edit_lock_":true }

[node name="title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 350.0
margin/top = 31.0
margin/right = 567.0
margin/bottom = 52.0
custom_fonts/font = ExtResource( 3 )
text = "Level Selection"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="get_back" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 532.0
margin/right = 551.0
margin/bottom = 559.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back to menu"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Level_1" type="Button" parent="."]

hint/tooltip = "Grand marbles in the space."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 100.0
margin/right = 288.0
margin/bottom = 156.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 1"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Level_2" type="Button" parent="."]

hint/tooltip = "Metals, you\'ve never seen."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 100.0
margin/right = 548.0
margin/bottom = 156.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 2"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Level_3" type="Button" parent="."]

hint/tooltip = "Unknown Crystals of damned."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 610.0
margin/top = 100.0
margin/right = 808.0
margin/bottom = 156.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 3"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Level_4" type="Button" parent="."]

hint/tooltip = "The Zig Zag blue."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 200.0
margin/right = 288.0
margin/bottom = 256.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 4"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Level_5" type="Button" parent="."]

hint/tooltip = "Where flames of Hell begin."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 200.0
margin/right = 548.0
margin/bottom = 256.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 5"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Level_6" type="Button" parent="."]

hint/tooltip = "Gold are never scare here."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 610.0
margin/top = 200.0
margin/right = 808.0
margin/bottom = 256.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 6"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Level_7" type="Button" parent="."]

hint/tooltip = "Honey Comb without honey."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 300.0
margin/right = 288.0
margin/bottom = 356.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 7"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Level_8" type="Button" parent="."]

hint/tooltip = "Does Slime exist in space \?"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 300.0
margin/right = 548.0
margin/bottom = 356.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 8"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Level_9" type="Button" parent="."]

hint/tooltip = "The forgotten Red Pebbles."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 610.0
margin/top = 300.0
margin/right = 808.0
margin/bottom = 356.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 9"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Level_10" type="Button" parent="."]

hint/tooltip = "Hell never ends."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 400.0
margin/right = 548.0
margin/bottom = 456.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 10"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="get_back" to="." method="_on_get_back_pressed"]

[connection signal="pressed" from="Level_1" to="." method="_on_Level_1_pressed"]

[connection signal="pressed" from="Level_2" to="." method="_on_Level_2_pressed"]

[connection signal="pressed" from="Level_3" to="." method="_on_Level_3_pressed"]

[connection signal="pressed" from="Level_4" to="." method="_on_Level_4_pressed"]

[connection signal="pressed" from="Level_5" to="." method="_on_Level_5_pressed"]

[connection signal="pressed" from="Level_6" to="." method="_on_Level_6_pressed"]

[connection signal="pressed" from="Level_7" to="." method="_on_Level_7_pressed"]

[connection signal="pressed" from="Level_8" to="." method="_on_Level_8_pressed"]

[connection signal="pressed" from="Level_9" to="." method="_on_Level_9_pressed"]

[connection signal="pressed" from="Level_10" to="." method="_on_Level_10_pressed"]


